fixing order handler, dto request and handler
